Synchronizing files (Charlie/Alex)

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -13,7 +13,7 @@
 <div class="row">
 
     <div class="col s12 m4 l3 blue lighten-4">
-        <div class="row">LOGO</div>
+        <div class="row s12 m4 l3" id="logo">LOGGA</div>
         <ul class="collapsible grey lighten-3" data-collapsible="expandable">
             <li>
                 <div class="collapsible-header active"><i class="material-icons"></i>Mätstationer</div>
@@ -38,6 +38,11 @@
     <div class="col s12 m8 l9 grey lighten-3" id="main">
         <div id="map"></div>
     </div>
+
+    <div class="col s12 m12 l12 blue lighten-3 z-depth-2" id="main">
+        <div id="map"></div>
+    </div>
+
 
 </div>
 
