More UI updates

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -12,31 +12,31 @@
 
 <!-- Page Layout here -->
 <header>
-    <nav class="top-nav blue lighten-3 black-text">
+    <nav class="top-nav blue-grey lighten-1 black-text">
         <div class="container">
-            <div class="nav-wrapper"><a class="page-title">Text...</a></div>
+            <div class="nav-wrapper"><a class="page-title">[STAD] - Meningsfull text...</a></div>
         </div>
     </nav>
     <div class="container"><a href="#" data-activates="nav-mobile" class="button-collapse top-nav full hide-on-large-only"><i class="mdi-navigation-menu"></i></a></div>
     <ul id="nav-mobile" class="side-nav fixed" style="width: 240px;">
-        <li class="logo"><a id="logo-container" href="http://eastswedenhack.se" class="brand-logo">
-            <object id="front-page-logo" type="image/svg+xml" data="">Your browser does not support SVG</object></a></li>
+        <li class="logo">LOGGA<a id="logo-container" href="http://eastswedenhack.se" class="brand-logo">
+            <object id="front-page-logo" type="image/svg+xml" data="" style="font-size: 1vw;">Your browser does not support SVG</object></a></li>
         <li class="no-padding">
-            <ul class="collapsible collapsible-accordion">
-                <li class="bold"><a class="waves-effect waves-grey">Mätstationer</a>
+            <ul class="collapsible">
+                <li class="bold top-li">Mätstationer
                     <div class="collapsible-body" style="display: block;">
                         <ul>
-                            <li><a href="#">Station 1</a></li>
-                            <li><a href="#">Station 2</a></li>
-                            <li><a href="#">Station 3</a></li>
+                            <li><a class="" href="#">Station 1</a></li>
+                            <li><a class="" href="#">Station 2</a></li>
+                            <li><a class="" href="#">Station 3</a></li>
                         </ul>
                     </div>
                 </li>
-                <li class="bold"><a class="waves-effect waves-grey">Visa datalager</a>
+                <li class="bold top-li">Visa datalager
                     <div class="collapsible-body" style="display: block;">
                         <ul>
-                            <li><a href="badges.html">Snödjup</a></li>
-                            <li><a href="badges.html">Trafik</a></li>
+                            <li><a href="#">Snödjup</a></li>
+                            <li><a href="#">Trafik</a></li>
                         </ul>
                     </div>
                 </li>
