--- a/webapp/index.html
+++ b/webapp/index.html
@@ -67,6 +67,8 @@
 <script type="text/javascript" src="bower_components/chartist/dist/chartist.min.js"></script>
 <!--Chartscript-->
 <script type="text/javascript" src="chartscript.js"></script>
+<!--Layoutscript-->
+<script type="text/javascript" src="layoutscript.js"></script>
 <!--API KEY AIzaSyDS5YnG1YBvFm3daqWd5d0Fc8GqXfiqkd0-->
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"></script>
 
