Justerad storlek på grafrutan

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <div class="col s12 m12 l12 blue lighten-3 z-depth-2" id="chart">
-            <div class="ct-chart ct-golden-section" id="chart1"></div>
+            <div class="ct-chart ct-double-octave" id="chart1"></div>
             </div>
         </div>
     </main>
