--- a/webapp/index.html
+++ b/webapp/index.html
@@ -44,9 +44,8 @@
             <div id="map"></div>
         </div>
 
-        <div class="col s12 m12 l12 blue lighten-3 z-depth-2" id="chart">
+        <div class="col s12 m12 l12 z-depth-2" id="chart">
             <div class="ct-chart ct-double-octave" id="chart1"></div>
-            </div>
         </div>
     </main>
 
