Lagt till logotyp

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -14,8 +14,7 @@
 <header>
     <div class="container"><a href="#" data-activates="nav-mobile" class="button-collapse top-nav full hide-on-large-only"><i class="mdi-navigation-menu"></i></a></div>
     <ul id="nav-mobile" class="side-nav fixed" style="width: 240px;">
-        <li class="logo">LOGGA<a id="logo-container" href="http://eastswedenhack.se" class="brand-logo">
-            <object id="front-page-logo" type="image/svg+xml" data="" style="font-size: 1vw;">Your browser does not support SVG</object></a></li>
+        <li class="logo"><img class="responsive-img" src="images/rojlogocropped.png"></li>
         <li class="no-padding">
             <ul class="collapsible">
                 <li class="bold top-li">Mätstationer
