La till bars, egen css och temperatur

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,6 +6,7 @@
     <link type="text/css" rel="stylesheet" href="bower_components/materialize/dist/css/materialize.min.css"  media="screen,projection"/>
     <title>Röj</title>
     <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="chartStyle.css"/>
     <link rel="stylesheet" href="bower_components/chartist/dist/chartist.min.css">
 </head>
 <body>
