Fixat miss vid inläggning av stationsnamn

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -19,7 +19,7 @@
         <li class="no-padding">
             <ul class="collapsible">
                 <li class="bold top-li">Mätstationer
-                    <div class="collapsible-body" style="display: block;">
+                    <div class="collapsible-body stations" style="display: block;">
                         <ul>
                         </ul>
                     </div>
