--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,8 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link type="text/css" rel="stylesheet" href="bower_components/materialize/dist/css/materialize.min.css"  media="screen,projection"/>
     <title>Röj</title>
+    <link type="text/css" rel="stylesheet" href="bower_components/materialize/dist/css/materialize.min.css"  media="screen,projection"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles.css"/>
     <link rel="stylesheet" href="chartStyle.css"/>
     <link rel="stylesheet" href="bower_components/chartist/dist/chartist.min.css">
@@ -38,6 +39,10 @@
     <main>
         <div id="map"></div>
         <div id="chart-holder">
+            <div id="chart-info">
+                Timma:<br>
+                Datum:
+            </div>
             <div class="ct-chart ct-double-octave" id="chart1"></div>
         </div>
     </main>
