Lagt till trafikoverlay med togglefunktion

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -28,7 +28,7 @@
                     <div class="collapsible-body" style="display: block;">
                         <ul>
                             <li><a href="#">Snödjup</a></li>
-                            <li><a href="#" id="traffic-overlay">Trafik</a></li>
+                            <li><a href="#" id="trafficToggle">Trafik</a></li>
                         </ul>
                     </div>
                 </li>
