--- a/webapp/index.html
+++ b/webapp/index.html
@@ -24,7 +24,7 @@
                         </ul>
                     </div>
                 </li>
-                <li class="top-li"><a class="bold">Visa datalager</a>
+                <li class="top-li"><a class="bold">Datalager</a>
                     <div class="collapsible-body" style="display: block;">
                         <ul>
                             <li><a href="#">Snödjup</a></li>
