Add toggle snödjup

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -27,7 +27,7 @@
                 <li class="top-li"><a class="bold">Datalager</a>
                     <div class="collapsible-body" style="display: block;">
                         <ul>
-                            <li><a href="#">Snödjup</a></li>
+                            <li><a href="#" id="snowDepthToggle">Snödjup</a></li>
                             <li><a href="#" id="trafficToggle">Trafik</a></li>
                         </ul>
                     </div>
